fix: overlap icon

--- a/src/components/NavComponent.module.css
+++ b/src/components/NavComponent.module.css
@@ -91,7 +91,7 @@
 
 .nav-overlap {
   position: absolute;
-  right: -0.2em;
+  right: -0.27em;
   bottom: -0.25em;
 
   font-size: .9em;
